--- a/src/main/resources/static/tea_index.html
+++ b/src/main/resources/static/tea_index.html
@@ -60,6 +60,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">信息维护<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="include/teacher/info.html" id="sel">个人信息</a></li>
+                        <li><a href="include/teacher/Change_Pass.html">修改密码</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
