--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="css/bootstrap/3.3.6/bootstrap.min.css">
     <link href="css/bootstrap/3.3.6/signin.css" rel="stylesheet">
-    <script src="JS/jquery-3.3.1.min.js" ></script>
+    <script src="JS/jquery.min.js" ></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('.loginBtn').click(function () {
